--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
     	<title>This MyBlog </title>
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="CSS/bootstrap.css" rel="stylesheet">
     </head>
     <body>
     	
