Update and rename userlogin.php to userlogin.html

--- a/userlogin.html
+++ b/userlogin.html
@@ -34,7 +34,7 @@
 						</button>
 					</form>
                     <br><br>
-                    <label><a href="halamanutama.php">Kembali</a> </label>
+                    <label><a href="index.html">Kembali</a> </label>
 				</div>
 				<div class="col-md-4">
 				</div>
