--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     	
         <div class="container-fluid">
 				<h3 align="center">This My Blog</h3>
-                <h3 align="right"> <a href="userlogin.php">Login</a></h3>
+                <h3 align="right"> <a href="userlogin.html">Login</a></h3>
     <div class="row" style="margin-top:10px"  style=" width:400px">
 		<div class="col-md-12">
 			<ul class="nav nav-tabs">
