--- a/userlogin.html
+++ b/userlogin.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
     	<title>This MyBlog </title>
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="CSS/bootstrap.css" rel="stylesheet">
     </head>
     <body>
      <h1 align="center">Silahkan Login</h1>
@@ -34,7 +34,7 @@
 						</button>
 					</form>
                     <br><br>
-                    <label><a href="halamanutama.php">Kembali</a> </label>
+                    <label><a href="index.html">Kembali</a> </label>
 				</div>
 				<div class="col-md-4">
 				</div>
