--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Appilajara Mappare WEB BLOG</title>
 	
 	<!-- core CSS -->
-    <link href="CSS/bootstrap.min.css" rel="stylesheet">
-    <link href="CSS/font-awesome.min.css" rel="stylesheet">
-    <link href="CSS/animate.min.css" rel="stylesheet">
-    <link href="CSS/prettyPhoto.css" rel="stylesheet">
-    <link href="CSS/main.css" rel="stylesheet">
-    <link href="CSS/responsive.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/prettyPhoto.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -72,7 +72,7 @@
                         </li>
                         <li><a href="#">Blog</a></li> 
                         <li><a href="#">Kontak</a></li>  
-						<li><a href="#">login</a></li>  	
+						<li><a href="userlogin.html">login</a></li>  	
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -83,9 +83,9 @@
     <section id="main-slider" class="no-margin">
         <div class="carousel slide">
             <ol class="carousel-indicators">
-                <li data-target="#main-slider" data-slide-to="1" class="active"></li>
+                <li data-target="#main-slider" data-slide-to="0" class="active"></li>
+                <li data-target="#main-slider" data-slide-to="1"></li>
                 <li data-target="#main-slider" data-slide-to="2"></li>
-                <li data-target="#main-slider" data-slide-to="3"></li>
             </ol>
             <div class="carousel-inner">
 
