--- a/apaitusem.html
+++ b/apaitusem.html
@@ -21,6 +21,11 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <style>
+    	p::first-line { 
+    		padding-left:3em;
+    	}
+    </style>
 </head><!--/head-->
 <body>
 
@@ -78,7 +83,7 @@
 			</h1><br><br>
 
 			<p style="color:black">
-				&nbsp &nbsp &nbsp &nbsp &nbsp Model persamaan struktural (structural equation model, SEM) adalah salah satu metode penelitian multivariat yang banyak dipergunakan dalam penelitian ekonomi dan manajemen. SEM bagi para peneliti ilmu sosial memberikan kemampuan untuk melakukan analisis jalur (path analysis) dengan variabel laten. Analisis ini sering disebut sebagai generasi kedua dari analisis multivariat. Generasi pertama dari analisis multivariat adalah: pricipal component analysis, factor analysis, discriminant analysis dan multiple regression. Keunggulan dari SEM dibandingkan dengan generasi pertama multivariat adalah bahwa SEM memiliki fleksibilitas yang lebih tinggi bagi peneliti untuk menghubungkan antara teori dengan data.<br><br>
+				 Model persamaan struktural (structural equation model, SEM) adalah salah satu metode penelitian multivariat yang banyak dipergunakan dalam penelitian ekonomi dan manajemen. SEM bagi para peneliti ilmu sosial memberikan kemampuan untuk melakukan analisis jalur (path analysis) dengan variabel laten. Analisis ini sering disebut sebagai generasi kedua dari analisis multivariat. Generasi pertama dari analisis multivariat adalah: pricipal component analysis, factor analysis, discriminant analysis dan multiple regression. Keunggulan dari SEM dibandingkan dengan generasi pertama multivariat adalah bahwa SEM memiliki fleksibilitas yang lebih tinggi bagi peneliti untuk menghubungkan antara teori dengan data.<br><br>
 
 &nbsp &nbsp &nbsp &nbsp &nbsp SEM merupakan gabungan dua alat analisis yang diambil dari ekonometrika yaitu persamaan simultan yang memfokuskan pada prediksi, dengan psikometrika yang berkembang pada ilmu psikologi yang mampu menggambarkan variabel laten (tak terukur langsung) dan diukur secara tidak langsung melalui indikator-indikator (variable manifest).<br><br>
 
